fixed: blueprint creation view no longer covers global nav

--- a/src/apps/account/src/views/BlueprintCreate/BlueprintCreate.less
+++ b/src/apps/account/src/views/BlueprintCreate/BlueprintCreate.less
@@ -18,11 +18,7 @@
   margin: 0;
   align-items: center;
   justify-content: center;
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 94vh;
   // animation: slideIn 400ms forwards;
   .nameNew {
     width: 25rem;
